[DAQ-2239] remove org.dawnsci.datavis.view.ActionServiceManager
Change-Id: I7ceb781b0a5fb42633491468479959894c7c9349